# charls-bazel-test

./: .gitignore  BUILD.bazel  LICENSE.md  MODULE.bazel  README.md
bazel/: configure_copts.bzl
test-shared/: BUILD.bazel  main.cpp
test-static/: BUILD.bazel
