# SPDX-FileCopyrightText: © 2025 Team CharLS
# SPDX-License-Identifier: BSD-3-Clause

load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("//:bazel/configure_copts.bzl", "CHARLS_BAZEL_TEST_DEFAULT_COPTS")

cc_binary(
    name = "charls-test-static",
    srcs = [
        "main.cpp",
    ],
    copts = CHARLS_BAZEL_TEST_DEFAULT_COPTS,
    deps = [
        "@charls//:charls",
    ],
)
